// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When fetching multiple resources GET /resources/bibliographicReferences when all of the resources are published should fetch multiple resources of type bibliographicReference 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "abstract": "This is the abstract, NOT a general note!",
        "creators": Array [
          Object {
            "name": "Alana Duvernay",
            "type": "author",
          },
        ],
        "isbn": "978-1-895811-34-6",
        "numberOfPages": 455,
        "place": "Kennebunk Port, Maine",
        "publisher": "Atlantic Publishing",
        "title": "A Day in the Life",
        "type": "book",
        "url": "https://atlanticpublishing.com",
        "year": 1999,
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "data": Object {
        "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
        "creators": Array [
          Object {
            "name": "Sigurd Purcell",
            "type": "author",
          },
        ],
        "doi": "10.14288/bcs.v0i19.784",
        "issn": "00052949",
        "issueDate": "Spring 2013",
        "publicationTitle": "Journal of History",
        "title": "Report on the Cariboo Chilcotin Justice inquiry",
        "type": "journalArticle",
        "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "data": Object {
        "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
        "caseName": "2002-07-08_Tsilhqot'inTitleCase",
        "court": "Supreme Court of British Columbia",
        "dateDecided": "Recorded 2002-07-08",
        "pages": "Pages 1-6",
        "type": "courtCase",
        "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
          "label": "law",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/bibliographicReferences when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "data": Object {
        "abstract": "This is the abstract, NOT a general note!",
        "creators": Array [
          Object {
            "name": "Alana Duvernay",
            "type": "author",
          },
        ],
        "isbn": "978-1-895811-34-6",
        "numberOfPages": 455,
        "place": "Kennebunk Port, Maine",
        "publisher": "Atlantic Publishing",
        "title": "A Day in the Life",
        "type": "book",
        "url": "https://atlanticpublishing.com",
        "year": 1999,
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "data": Object {
        "abstract": "An analysis of the Cariboo Chilcotin Justice inquiry.",
        "creators": Array [
          Object {
            "name": "Sigurd Purcell",
            "type": "author",
          },
        ],
        "doi": "10.14288/bcs.v0i19.784",
        "issn": "00052949",
        "issueDate": "Spring 2013",
        "publicationTitle": "Journal of History",
        "title": "Report on the Cariboo Chilcotin Justice inquiry",
        "type": "journalArticle",
        "url": "https://search.proquest.com/docview/1682229477/abstract/7836BCEA06014582PQ/1",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "data": Object {
        "abstract": "William, June
- Nemiah Valley
- Qualifying as an expert in Tsilhqot'in written language",
        "caseName": "2002-07-08_Tsilhqot'inTitleCase",
        "court": "Supreme Court of British Columbia",
        "dateDecided": "Recorded 2002-07-08",
        "pages": "Pages 1-6",
        "type": "courtCase",
        "url": "https://www.myzoterolink.com/bogus-link-to-doc.php",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110006",
          "label": "law",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/books when all of the resources are published should fetch multiple resources of type book 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "author": "John Doeburg",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "pages": Array [
        Object {
          "identifier": "1",
          "text": "foo",
          "translation": "dee foo",
        },
        Object {
          "identifier": "2",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2002",
      "subtitle": "The wolf's revenge",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "Three Little Pigs",
    },
    Object {
      "actions": Array [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
      "pages": Array [
        Object {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2011",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "An Adventure Story",
    },
    Object {
      "actions": Array [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110025",
      "pages": Array [
        Object {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2012",
      "tags": Array [],
      "title": "An Adventure Story II",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/books when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "author": "John Doeburg",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
      "pages": Array [
        Object {
          "identifier": "1",
          "text": "foo",
          "translation": "dee foo",
        },
        Object {
          "identifier": "2",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2002",
      "subtitle": "The wolf's revenge",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "Three Little Pigs",
    },
    Object {
      "actions": Array [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
      "pages": Array [
        Object {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2011",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "title": "An Adventure Story",
    },
    Object {
      "actions": Array [],
      "author": "Jane Donnaldson",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110025",
      "pages": Array [
        Object {
          "identifier": "ix",
          "text": "blah blah blah",
          "translation": "blahas",
        },
      ],
      "publicationDate": "2012",
      "tags": Array [],
      "title": "An Adventure Story II",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/mediaItems when all of the resources are published should fetch multiple resources of type mediaItem 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 2500,
      "mimeType": "audio/mpeg",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "episode title (in language)",
      "titleEnglish": "Metal Mondays episode 1",
      "url": "https://www.metalmondays.com/1.mp3",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/mediaItems when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 2500,
      "mimeType": "audio/mpeg",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "episode title (in language)",
      "titleEnglish": "Metal Mondays episode 1",
      "url": "https://www.metalmondays.com/1.mp3",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/photographs when all of the resources are published should fetch multiple resources of type photograph 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
      "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
      "photographer": "Susie McRealart",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "label": "placenames",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
              "type": "photograph",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
              "type": "audioItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "imageURL": "https://www.mysound.org/downloads/Nuu-Story.png",
      "photographer": "Robert McRealart",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
          "label": "songs",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "photograph",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112002",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "imageURL": "https://www.mysound.org/downloads/TwoBrothersPole.png",
      "photographer": "Kenny Tree-Huggens",
      "tags": Array [],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/photographs when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
      "imageURL": "https://www.mysound.org/downloads/Adiitsii-Running.png",
      "photographer": "Susie McRealart",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
          "label": "placenames",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110000",
              "type": "photograph",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
              "type": "audioItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112003",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "imageURL": "https://www.mysound.org/downloads/Nuu-Story.png",
      "photographer": "Robert McRealart",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
          "label": "songs",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "photograph",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112002",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "imageURL": "https://www.mysound.org/downloads/TwoBrothersPole.png",
      "photographer": "Kenny Tree-Huggens",
      "tags": Array [],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/songs when all of the resources are published should fetch multiple resources of type song 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "audioURL": "https://www.myaudio.com/lamb.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 3500,
      "lyrics": "Mary had a little lamb, little lamb.",
      "startMilliseconds": 0,
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "Song title in language",
      "titleEnglish": "Mary had a little lamb",
    },
    Object {
      "actions": Array [],
      "audioURL": "https://www.myaudio.com/badsong.wav",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "lengthMilliseconds": 33000,
      "lyrics": "Ain't gonna see the light of day, light of day, light of day",
      "startMilliseconds": 0,
      "tags": Array [],
      "title": "Unpublished Song Title (lang)",
      "titleEnglish": "Unpublished Song Title (Engl)",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/songs when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "audioURL": "https://www.myaudio.com/lamb.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "lengthMilliseconds": 3500,
      "lyrics": "Mary had a little lamb, little lamb.",
      "startMilliseconds": 0,
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
      "title": "Song title in language",
      "titleEnglish": "Mary had a little lamb",
    },
    Object {
      "actions": Array [],
      "audioURL": "https://www.myaudio.com/badsong.wav",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "lengthMilliseconds": 33000,
      "lyrics": "Ain't gonna see the light of day, light of day, light of day",
      "startMilliseconds": 0,
      "tags": Array [],
      "title": "Unpublished Song Title (lang)",
      "titleEnglish": "Unpublished Song Title (Engl)",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/spatialFeatures when all of the resources are published should fetch multiple resources of type spatialFeature 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          54.034404852745006,
          -132.17563335558532,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
      "properties": Object {
        "description": "Description for point 100",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 100",
      },
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          53.26710566708586,
          -131.99142447847115,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
      "properties": Object {
        "description": "Description for point 101",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 101",
      },
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          51.93152097800416,
          -123.14042112774867,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
      "properties": Object {
        "description": "Description for point 102",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 102",
      },
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          51.935065638350636,
          -122.50936316168337,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110103",
      "properties": Object {
        "description": "Description for point 103",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 103",
      },
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          52.12579975880678,
          -123.68132823530952,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110104",
      "properties": Object {
        "description": "Description for point 104",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 104",
      },
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          Array [
            52.3,
            -124.2,
          ],
          Array [
            52.35,
            -124.85,
          ],
          Array [
            52.21,
            -124.9,
          ],
          Array [
            52.05,
            -125.1,
          ],
          Array [
            52.15,
            -125.1,
          ],
          Array [
            52.33,
            -125.22,
          ],
          Array [
            52.45,
            -125.39,
          ],
        ],
        "type": "LineString",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "properties": Object {
        "description": "One amazing hike!",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Windy Path",
      },
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              52.47,
              -123.6,
            ],
            Array [
              52.42,
              -123.95,
            ],
            Array [
              52.05,
              -123.95,
            ],
            Array [
              52.05,
              -123.685,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110300",
      "properties": Object {
        "description": "Description for point 300",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Point with ID: 300 Name",
      },
      "tags": Array [],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/spatialFeatures when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          54.034404852745006,
          -132.17563335558532,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
      "properties": Object {
        "description": "Description for point 100",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 100",
      },
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          53.26710566708586,
          -131.99142447847115,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
      "properties": Object {
        "description": "Description for point 101",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 101",
      },
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          51.93152097800416,
          -123.14042112774867,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
      "properties": Object {
        "description": "Description for point 102",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 102",
      },
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          51.935065638350636,
          -122.50936316168337,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110103",
      "properties": Object {
        "description": "Description for point 103",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 103",
      },
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          52.12579975880678,
          -123.68132823530952,
        ],
        "type": "Point",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110104",
      "properties": Object {
        "description": "Description for point 104",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Name of Point with ID: 104",
      },
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          Array [
            52.3,
            -124.2,
          ],
          Array [
            52.35,
            -124.85,
          ],
          Array [
            52.21,
            -124.9,
          ],
          Array [
            52.05,
            -125.1,
          ],
          Array [
            52.15,
            -125.1,
          ],
          Array [
            52.33,
            -125.22,
          ],
          Array [
            52.45,
            -125.39,
          ],
        ],
        "type": "LineString",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "properties": Object {
        "description": "One amazing hike!",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Windy Path",
      },
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              52.47,
              -123.6,
            ],
            Array [
              52.42,
              -123.95,
            ],
            Array [
              52.05,
              -123.95,
            ],
            Array [
              52.05,
              -123.685,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110300",
      "properties": Object {
        "description": "Description for point 300",
        "imageUrl": "https://www.tsilhqotin.ca/wp-content/uploads/2022/11/tsilhqotin_language_logo_final.png",
        "name": "Point with ID: 300 Name",
      },
      "tags": Array [],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/terms when all of the resources are published should fetch multiple resources of type term 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "term": "Chil-term-1",
      "termEnglish": "Engl-term-1",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
      "term": "Chil-term-2",
      "termEnglish": "Engl-term-2",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
      "term": "Chil-term-no-english",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
      "tags": Array [],
      "term": "My Secret Term",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
      "tags": Array [],
      "term": "I am singing (lang)",
      "termEnglish": "I am singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
      "tags": Array [],
      "term": "You are singing (lang)",
      "termEnglish": "You are singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
      "tags": Array [],
      "term": "She is singing (lang)",
      "termEnglish": "She is singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "tags": Array [],
      "term": "I am not singing (lang)",
      "termEnglish": "I am not singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
      "tags": Array [],
      "term": "You are not singing (lang)",
      "termEnglish": "You are not singing (Engl)",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/terms when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
      "term": "Chil-term-1",
      "termEnglish": "Engl-term-1",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
      "term": "Chil-term-2",
      "termEnglish": "Engl-term-2",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
          "label": "animals",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110003",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110102",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112004",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110007",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "bibliographicReference",
            },
          ],
        },
      ],
      "term": "Chil-term-no-english",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110004",
      "tags": Array [],
      "term": "My Secret Term",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
      "tags": Array [],
      "term": "I am singing (lang)",
      "termEnglish": "I am singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
      "tags": Array [],
      "term": "You are singing (lang)",
      "termEnglish": "You are singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
      "tags": Array [],
      "term": "She is singing (lang)",
      "termEnglish": "She is singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
      "tags": Array [],
      "term": "I am not singing (lang)",
      "termEnglish": "I am not singing (Engl)",
    },
    Object {
      "actions": Array [],
      "contributor": "",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
      "tags": Array [],
      "term": "You are not singing (lang)",
      "termEnglish": "You are not singing (Engl)",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/transcribedAudioItems when all of the resources are published should fetch multiple resources of type audioItem 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
      "lengthMilliseconds": 20000,
      "mimeType": "audio/mpeg",
      "name": Object {
        "items": Array [
          Object {
            "languageCode": "eng",
            "role": "original",
            "text": "The Wooden Boy",
          },
        ],
      },
      "tags": Array [],
      "text": "[12000] [JHC] {eng}: There once was a little wooden boy. [15550]
[18300] [JHC] {eng}: His name was Pinocchio [19240]",
    },
    Object {
      "actions": Array [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110111",
      "lengthMilliseconds": 23409,
      "mimeType": "audio/mpeg",
      "name": Object {
        "items": Array [
          Object {
            "languageCode": "clc",
            "role": "original",
            "text": "Down at the River",
          },
        ],
      },
      "tags": Array [],
      "text": "[3400] [BL] {eng}: While she went down to the river [3670]
[3700] [SD] {eng}: someone had already filled the water tank. [3980]
[4010] [BL] {eng}: These were the types of problems we had. [4290]",
    },
    Object {
      "actions": Array [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110113",
      "lengthMilliseconds": 32989,
      "mimeType": "audio/mpeg",
      "name": Object {
        "items": Array [
          Object {
            "languageCode": "hai",
            "role": "original",
            "text": "Learning about Protocols",
          },
        ],
      },
      "tags": Array [],
      "text": "[120] [E1] {eng}: this type of spoon is used in ceremonies [848]
[930] [E2] {eng}: by members of the opposite clan of the house chief [1080]",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/transcribedAudioItems when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110110",
      "lengthMilliseconds": 20000,
      "mimeType": "audio/mpeg",
      "name": Object {
        "items": Array [
          Object {
            "languageCode": "eng",
            "role": "original",
            "text": "The Wooden Boy",
          },
        ],
      },
      "tags": Array [],
      "text": "[12000] [JHC] {eng}: There once was a little wooden boy. [15550]
[18300] [JHC] {eng}: His name was Pinocchio [19240]",
    },
    Object {
      "actions": Array [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110111",
      "lengthMilliseconds": 23409,
      "mimeType": "audio/mpeg",
      "name": Object {
        "items": Array [
          Object {
            "languageCode": "clc",
            "role": "original",
            "text": "Down at the River",
          },
        ],
      },
      "tags": Array [],
      "text": "[3400] [BL] {eng}: While she went down to the river [3670]
[3700] [SD] {eng}: someone had already filled the water tank. [3980]
[4010] [BL] {eng}: These were the types of problems we had. [4290]",
    },
    Object {
      "actions": Array [],
      "audioURL": "https://www.metalmondays.com/1.mp3",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110113",
      "lengthMilliseconds": 32989,
      "mimeType": "audio/mpeg",
      "name": Object {
        "items": Array [
          Object {
            "languageCode": "hai",
            "role": "original",
            "text": "Learning about Protocols",
          },
        ],
      },
      "tags": Array [],
      "text": "[120] [E1] {eng}: this type of spoon is used in ceremonies [848]
[930] [E2] {eng}: by members of the opposite clan of the house chief [1080]",
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/vocabularyLists when all of the resources are published should fetch multiple resources of type vocabularyList 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "entries": Array [
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
            "term": "I am singing (lang)",
            "termEnglish": "I am singing (Engl)",
          },
          "variableValues": Object {
            "person": "11",
            "positive": true,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
            "term": "You are singing (lang)",
            "termEnglish": "You are singing (Engl)",
          },
          "variableValues": Object {
            "person": "12",
            "positive": false,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
            "term": "She is singing (lang)",
            "termEnglish": "She is singing (Engl)",
          },
          "variableValues": Object {
            "person": "13",
            "positive": false,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
            "term": "I am not singing (lang)",
            "termEnglish": "I am not singing (Engl)",
          },
          "variableValues": Object {
            "person": "01",
            "positive": true,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
            "term": "You are not singing (lang)",
            "termEnglish": "You are not singing (Engl)",
          },
          "variableValues": Object {
            "person": "02",
            "positive": false,
          },
        },
      ],
      "form": Object {
        "fields": Array [
          Object {
            "constraints": Array [],
            "description": "choose positive",
            "label": "positive",
            "name": "positive",
            "options": Array [
              Object {
                "display": "negative (lha)",
                "value": false,
              },
              Object {
                "display": "positive form (switch for negative)",
                "value": true,
              },
            ],
            "type": "SWITCH",
          },
          Object {
            "constraints": Array [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": Array [
              Object {
                "display": "I",
                "value": "1",
              },
              Object {
                "display": "You",
                "value": "2",
              },
              Object {
                "display": "She",
                "value": "3",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
      "name": "To Sing (lang)",
      "nameEnglish": "To Sing (Engl)",
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "entries": Array [
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": Object {
            "person": "11",
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": Object {
            "person": "12",
          },
        },
      ],
      "form": Object {
        "fields": Array [
          Object {
            "constraints": Array [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": Array [
              Object {
                "display": "I",
                "value": "11",
              },
              Object {
                "display": "We",
                "value": "12",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": "test VL 1 chil",
      "nameEnglish": "test VL 1 engl",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "entries": Array [
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": Object {
            "his": false,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": Object {
            "his": true,
          },
        },
      ],
      "form": Object {
        "fields": Array [
          Object {
            "constraints": Array [],
            "description": "choose his",
            "label": "his",
            "name": "his",
            "options": Array [
              Object {
                "display": "his",
                "value": true,
              },
              Object {
                "display": "hers",
                "value": false,
              },
            ],
            "type": "SWITCH",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "name": "test VL 2 CHIL- no engl name",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": Array [],
}
`;

exports[`When fetching multiple resources GET /resources/vocabularyLists when some of the resources are unpublished should return the expected number of results 1`] = `
Object {
  "entities": Array [
    Object {
      "actions": Array [],
      "entries": Array [
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110511",
            "term": "I am singing (lang)",
            "termEnglish": "I am singing (Engl)",
          },
          "variableValues": Object {
            "person": "11",
            "positive": true,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110512",
            "term": "You are singing (lang)",
            "termEnglish": "You are singing (Engl)",
          },
          "variableValues": Object {
            "person": "12",
            "positive": false,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110513",
            "term": "She is singing (lang)",
            "termEnglish": "She is singing (Engl)",
          },
          "variableValues": Object {
            "person": "13",
            "positive": false,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110501",
            "term": "I am not singing (lang)",
            "termEnglish": "I am not singing (Engl)",
          },
          "variableValues": Object {
            "person": "01",
            "positive": true,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110502",
            "term": "You are not singing (lang)",
            "termEnglish": "You are not singing (Engl)",
          },
          "variableValues": Object {
            "person": "02",
            "positive": false,
          },
        },
      ],
      "form": Object {
        "fields": Array [
          Object {
            "constraints": Array [],
            "description": "choose positive",
            "label": "positive",
            "name": "positive",
            "options": Array [
              Object {
                "display": "negative (lha)",
                "value": false,
              },
              Object {
                "display": "positive form (switch for negative)",
                "value": true,
              },
            ],
            "type": "SWITCH",
          },
          Object {
            "constraints": Array [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": Array [
              Object {
                "display": "I",
                "value": "1",
              },
              Object {
                "display": "You",
                "value": "2",
              },
              Object {
                "display": "She",
                "value": "3",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b114567",
      "name": "To Sing (lang)",
      "nameEnglish": "To Sing (Engl)",
      "tags": Array [],
    },
    Object {
      "actions": Array [],
      "entries": Array [
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": Object {
            "person": "11",
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": Object {
            "person": "12",
          },
        },
      ],
      "form": Object {
        "fields": Array [
          Object {
            "constraints": Array [],
            "description": "choose person",
            "label": "person",
            "name": "person",
            "options": Array [
              Object {
                "display": "I",
                "value": "11",
              },
              Object {
                "display": "We",
                "value": "12",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": "test VL 1 chil",
      "nameEnglish": "test VL 1 engl",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "label": "plants",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "term",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110023",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110024",
              "type": "book",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110100",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112005",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110009",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110011",
              "type": "note",
            },
          ],
        },
      ],
    },
    Object {
      "actions": Array [],
      "entries": Array [
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
            "term": "Chil-term-2",
            "termEnglish": "Engl-term-2",
          },
          "variableValues": Object {
            "his": false,
          },
        },
        Object {
          "term": Object {
            "contributor": "",
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "term": "Chil-term-1",
            "termEnglish": "Engl-term-1",
          },
          "variableValues": Object {
            "his": true,
          },
        },
      ],
      "form": Object {
        "fields": Array [
          Object {
            "constraints": Array [],
            "description": "choose his",
            "label": "his",
            "name": "his",
            "options": Array [
              Object {
                "display": "his",
                "value": true,
              },
              Object {
                "display": "hers",
                "value": false,
              },
            ],
            "type": "SWITCH",
          },
        ],
      },
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
      "name": "test VL 2 CHIL- no engl name",
      "tags": Array [
        Object {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110005",
          "label": "legends",
          "members": Array [
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110002",
              "type": "vocabularyList",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110101",
              "type": "spatialFeature",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b112001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "note",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "mediaItem",
            },
            Object {
              "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
              "type": "song",
            },
          ],
        },
      ],
    },
  ],
  "indexScopedActions": Array [],
}
`;
